<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.MainActivity"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/rocket_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/rocket_image_imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="center"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:srcCompat="@drawable/ic_dark_square"
                />

            <TextView
                android:id="@+id/rocket_name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rocket_image_imageView"
                android:layout_marginTop="10dp"
                android:textSize="30sp"
                tools:text="@string/rocket_title"/>

            <TextView
                android:id="@+id/rocket_description_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/rocket_name_textview"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="18sp"
                tools:text="@string/rocket_description"/>

            <TextView
                android:id="@+id/rocket_height_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/rocket_description_textView"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                tools:text="@string/rocket_height"/>

            <TextView
                android:id="@+id/rocket_diameter_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/rocket_height_textView"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                tools:text="@string/rocket_diameter"/>

            <TextView
                android:id="@+id/rocket_mass_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/rocket_diameter_textView"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                tools:text="@string/rocket_mass"/>

            <TextView
                android:id="@+id/rocket_engines_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/rocket_mass_textView"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                tools:text="@string/rocket_engines"/>

            <TextView
                android:id="@+id/rocket_engines_type_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/rocket_engines_textView"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                tools:text="@string/rocket_engines_type"/>

            <TextView
                android:id="@+id/rocket_cost_per_launch_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/rocket_engines_type_textView"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                tools:text="@string/rocket_cost_per_launch"/>

            <TextView
                android:id="@+id/rocket_success_rate_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/rocket_cost_per_launch_textView"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                tools:text="@string/rocket_success_rate"/>

            <TextView
                android:id="@+id/rocket_first_flight_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/rocket_success_rate_textView"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                tools:text="@string/rocket_first_flight"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>