<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.MainActivity"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <ScrollView
            android:id="@+id/launch_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                android:id="@+id/launch_picture_imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="center"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:layout_constraintBottom_toTopOf="@+id/launch_name_textView"
                app:srcCompat="@drawable/ic_dark_square"
                />

            <TextView
                android:id="@+id/launch_name_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/launch_picture_imageView"
                android:layout_marginTop="15dp"
                android:textSize="25sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:shadowColor="@color/colorAccent"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                tools:text="@string/launch_title"/>

            <TextView
                android:id="@+id/launch_date_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/launch_name_textView"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/launch_rocket_textView"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                tools:text="@string/launch_date"/>

            <TextView
                android:id="@+id/launch_rocket_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/launch_name_textView"
                app:layout_constraintRight_toLeftOf="@+id/launch_date_textView"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="Falcon heavy"/>

            <TextView
                android:id="@+id/launch_details_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/launch_rocket_textView"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:textAlignment="center"
                tools:text="@string/details_launch_exemple"
                android:gravity="center_horizontal" />

            <ImageButton
                android:id="@+id/launch_webcast_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/launch_details_textView"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="30dp"
                android:scaleType="center"
                android:background="@drawable/transparent_background"
                android:src="@drawable/youtube_logo" />

                <TextView
                    android:id="@+id/no_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/launch_details_textView"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:text="Sorry, no video for this launch !"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>